<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/android_lar"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToOutline="true"
    android:background="@drawable/android_lar">

    <View
        android:id="@+id/photo_2023_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/photo_2023"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/choose_loca2"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/choose_loca2"
        android:textAppearance="@style/choose_loca2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052" />

    <View
        android:id="@+id/rectangle_17"
        android:layout_width="220dp"
        android:layout_height="123dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/rectangle_17"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/photo_2023_"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.351"
        android:onClick="to_hockey_1_player"/>

    <View
        android:id="@+id/rectangle_22"
        android:layout_width="149dp"
        android:layout_height="231dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/rectangle_22"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_17"
        app:layout_constraintVertical_bias="0.24"
        android:onClick="to_get_hole_1_player"/>

    <TextView
        android:id="@+id/get_hole"
        android:layout_width="170dp"
        android:layout_height="107dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="68dp"
        android:gravity="top"
        android:text="@string/get_hole"
        android:textAppearance="@style/get_hole"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="@+id/rectangle_22"
        app:layout_constraintTop_toTopOf="@+id/rectangle_22"
        app:layout_constraintVertical_bias="0.186"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/hockey1"
        android:layout_width="147dp"
        android:layout_height="83dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/hockey"
        android:textAppearance="@style/hockey"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_17"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_17"
        app:layout_constraintHorizontal_bias="0.684"
        app:layout_constraintStart_toStartOf="@+id/rectangle_17"
        app:layout_constraintTop_toTopOf="@+id/rectangle_17"
        app:layout_constraintVertical_bias="0.0"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>